objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <formula>Account.Parent.Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>SalesRep</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <formula>Account.Parent.Parent.Distributor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maps__c</fullName>
        <formula>IMAGE(
&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + MailingStreet + &quot;,&quot; + MailingCity + &quot;,&quot; + MailingState + &quot; &quot; + MailingPostalCode +&quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:blue|&quot; + MailingStreet + &quot;,&quot; + MailingCity + &quot;,&quot; + MailingState + &quot; &quot; + MailingPostalCode + &quot;&amp;sensor=false&amp;format=png32&quot; , &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RelatedContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Type__c</fullName>
        <label>Seller Type</label>
        <picklist>
            <picklistValues>
                <fullName>PreSeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VanSeller</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Sellers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Seller</value>
        </filters>
        <label>All Sellers</label>
    </listViews>
    <listViews>
        <fullName>All_Supervisors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Supervisor</value>
        </filters>
        <label>All Supervisors</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Seller</fullName>
        <active>true</active>
        <label>Seller</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supervisor</fullName>
        <active>true</active>
        <label>Supervisor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>